--- a/SneakerInside/Views/Catalog/Create.cshtml
+++ b/SneakerInside/Views/Catalog/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = null;
 }
 
-<form asp-action="Create" onsubmit="return create(this);" autocomplete="off">
+<form asp-action="Create" onsubmit="return submitForm(this);" autocomplete="off">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="CatalogName" class="control-label"></label>
@@ -18,7 +18,7 @@
         <span asp-validation-for="Status" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Thêm mới" class="btn btn-success btn-block" />
+        <input type="submit" value="Thêm mới" class="btn btn-success btn-block"/>
     </div>
 </form>
 
