--- a/SneakerInside/Views/Catalog/Index.cshtml
+++ b/SneakerInside/Views/Catalog/Index.cshtml
@@ -80,13 +80,17 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"></h5>
+                <h5 class="modal-title">Xóa hãng giày</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-
+                <p>Bạn có muốn xóa hãng giày ?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                <button type="button" class="btn btn-danger" onclick="deleteForm()">Xóa</button>
             </div>
         </div>
     </div>
@@ -96,7 +100,7 @@
 @section Scripts{
     <script type="text/javascript">
         //Lấy dữ liệu lên bảng
-        var dataTable;
+        var dataTable, tempId;
         $(document).ready(function () {
             dataTable = $('#catalogTable').DataTable({
                 ajax: {
@@ -108,7 +112,7 @@
                     {
                         data: 'catalogID',
                         render: function (data) {
-                            return '<button type="button" class="btn btn-info" onclick="showEditModal(' + data + ')"><i class="fas fa-edit"></i></button ><button type = "button" class="btn btn-danger" style = "margin-left:5px" onclick = "showModal(' + data + ')"><i class="fas fa-trash-alt"></i></button >';
+                            return '<button type="button" class="btn btn-info" onclick="showEditModal(' + data + ')"><i class="fas fa-edit"></i></button ><button type = "button" class="btn btn-danger" style = "margin-left:5px" onclick = "showDeleteModal(' + data + ')"><i class="fas fa-trash-alt"></i></button >';
                         },
                         orderable: false,
                         width: '100px'
@@ -152,7 +156,13 @@
             })
         }
 
-        //Hàm thực hiện
+        //Hàm hiện modal xóa
+        function showDeleteModal(data) {
+            tempId = data;
+            $("#deleteModal").modal('show');
+        }
+
+        //Hàm thực hiện thêm, sửa
         function submitForm(form) {
             $.validator.unobtrusive.parse(form);
             if ($(form).valid()) {
@@ -176,6 +186,23 @@
                 });
             }
             return false;
+        }
+
+        //Hàm thực hiện xóa
+        function deleteForm() {
+            $.ajax({
+                type: "POST",
+                url: "@Url.Action("Delete", "Catalog")/" + tempId,
+                success: function (res) {
+                    if (res.isValid) {
+                        $("#deleteModal").modal('hide');
+                        dataTable.ajax.reload();
+                    }
+                    else {
+                        alert(res.isValid);
+                    }
+                }
+            });
         }
     </script>
 }
