--- a/SneakerInside/Views/Shared/_Layout.cshtml
+++ b/SneakerInside/Views/Shared/_Layout.cshtml
@@ -168,6 +168,8 @@
     <script src="~/adminLTE/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/adminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-growl/1.0.0/jquery.bootstrap-growl.min.js"></script>
     <!-- DataTables  & Plugins -->
     <script src="~/adminLTE/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="~/adminLTE/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
@@ -181,7 +183,7 @@
     <script src="~/adminLTE/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
     <script src="~/adminLTE/plugins/datatables-buttons/js/buttons.print.min.js"></script>
     <script src="~/adminLTE/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-
+    <!--Validate-->
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <!-- AdminLTE App -->
