--- a/SneakerInside/Views/Shared/_Layout.cshtml
+++ b/SneakerInside/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
 
         <!-- Preloader -->
         @*<div class="preloader flex-column justify-content-center align-items-center">
-                <img class="animation__shake" src="~/adminLTE/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
-            </div>*@
+            <img class="animation__shake" src="~/adminLTE/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+        </div>*@
 
         <!-- Navbar -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -154,6 +154,45 @@
             <!-- /.content -->
         </div>
         <!-- /.content-wrapper -->
+
+        <!-- Modal thêm, sửa-->
+        <div class="modal fade" id="commonModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title"></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Modal xóa-->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Xóa hãng giày</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Bạn có muốn xóa hãng giày ?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                        <button type="button" class="btn btn-danger" onclick="deleteForm()">Xóa</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer class="main-footer">
             <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
             All rights reserved.
@@ -168,7 +207,9 @@
     <script src="~/adminLTE/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/adminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <!-- AdminLTE App -->
+    <script src="~/adminLTE/dist/js/adminlte.min.js"></script>
+    <!--Boostrap growl-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-growl/1.0.0/jquery.bootstrap-growl.min.js"></script>
     <!-- DataTables  & Plugins -->
     <script src="~/adminLTE/plugins/datatables/jquery.dataTables.min.js"></script>
@@ -186,8 +227,6 @@
     <!--Validate-->
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/adminLTE/dist/js/adminlte.min.js"></script>
     <!--Custom JS-->
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
