--- a/SneakerInside/Views/Shared/_Layout.cshtml
+++ b/SneakerInside/Views/Shared/_Layout.cshtml
@@ -177,17 +177,17 @@
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Xóa hãng giày</h5>
+                        <h5 class="modal-title">Xóa @ViewBag.Name</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Bạn có muốn xóa hãng giày ?</p>
+                        <p>Bạn có muốn xóa @ViewBag.Name ?</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-                        <button type="button" class="btn btn-danger" onclick="deleteForm()">Xóa</button>
+                        <button type="button" class="btn btn-danger" onclick="submitDelete()">Xóa</button>
                     </div>
                 </div>
             </div>
